--- a/package.json
+++ b/package.json
@@ -3,23 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.7",
+    "cypress": "^6.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "styled-components": "^5.2.1",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npm run test:jest && npm run test:cypress",
+    "test:jest": "jest",
+    "test:watch": "jest --verbose --watchAll --no-cache --runInBand",
+    "test:cypress": "cypress run",
+    "tsc:check": "npm run tsc:src && npm run tsc:cypress",
+    "tsc:src": "tsc --noEmit --project tsconfig.json",
+    "tsc:cypress": "tsc --noEmit --project cypress/tsconfig.json",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^17.0.1"
   }
 }
